--- a/documents/Nextjs 2025/Nextjs New/26.md
+++ b/documents/Nextjs 2025/Nextjs New/26.md
@@ -76,85 +76,471 @@ app/
 ---
 
 
-## 🧭 Parallel Routes trong Next.js
+# Bài Giảng Chi Tiết: Parallel Routes trong Next.js App Router
 
-### 🎯 Mục tiêu
+## 1. Giới Thiệu về Parallel Routes
 
-* Hiểu cách render **nhiều outlet song song** trong cùng một layout.
-* Không cần nested route để render nhiều component khác nhau cùng lúc.
-* Giúp quản lý **dashboard, sidebar, header, modal** đồng thời trong cùng một layout.
+**Parallel Routes** là một tính năng mạnh mẽ trong Next.js App Router cho phép bạn render đồng thời nhiều pages trong cùng một layout. Điều này đặc biệt hữu ích khi bạn muốn hiển thị nhiều phần nội dung độc lập nhưng liên quan đến nhau trên cùng một màn hình.
 
----
+### Tại sao cần Parallel Routes?
 
-## 🧱 1️⃣ Cấu trúc thư mục
+- **Hiển thị nhiều view cùng lúc**: Dashboard với nhiều panels, modal kết hợp với content chính
+- **Navigation độc lập**: Mỗi route có thể có state và navigation riêng
+- **Loading và Error states riêng biệt**: Mỗi parallel route có thể có loading.js và error.js riêng
+- **Conditional rendering**: Hiển thị hoặc ẩn các routes dựa trên điều kiện
 
-Sử dụng **route groups `(group)`** để tạo Parallel Routes:
+## 2. Cú Pháp và Cấu Trúc
 
-```txt
+### 2.1. Định nghĩa Parallel Routes
+
+Parallel Routes được định nghĩa bằng cách sử dụng **named slots** với ký hiệu `@`:
+
+```
 app/
-├── dashboard/
-│   ├── layout.tsx
+├── @analytics/
 │   ├── page.tsx
-│   ├── (overview)/page.tsx
-│   └── (analytics)/page.tsx
+│   ├── loading.tsx
+│   └── error.tsx
+├── @team/
+│   ├── page.tsx
+│   └── loading.tsx
+├── @revenue/
+│   └── page.tsx
+├── layout.tsx
+└── page.tsx
 ```
 
-* `(overview)` và `(analytics)` là **route group**, **không ảnh hưởng URL**.
-* Layout `dashboard/layout.tsx` sẽ render song song cả 2 outlet.
+### 2.2. Sử dụng trong Layout
 
----
+Các slots này được truyền vào layout component như props:
 
-## 🧩 2️⃣ Dashboard Layout ví dụ
+```tsx
+// app/layout.tsx
+export default function Layout({
+  children,
+  analytics,
+  team,
+  revenue,
+}: {
+  children: React.ReactNode;
+  analytics: React.ReactNode;
+  team: React.ReactNode;
+  revenue: React.ReactNode;
+}) {
+  return (
+    <div>
+      <div>{children}</div>
+      <div className="dashboard">
+        <div className="analytics-section">{analytics}</div>
+        <div className="team-section">{team}</div>
+        <div className="revenue-section">{revenue}</div>
+      </div>
+    </div>
+  );
+}
+```
+
+## 3. Các Tính Năng Chính
+
+### 3.1. Independent Navigation
+
+Mỗi parallel route có thể điều hướng độc lập:
+
+```
+app/
+├── @modal/
+│   ├── login/
+│   │   └── page.tsx
+│   ├── signup/
+│   │   └── page.tsx
+│   └── default.tsx
+├── layout.tsx
+└── page.tsx
+```
+
+```tsx
+// app/layout.tsx
+export default function Layout({
+  children,
+  modal,
+}: {
+  children: React.ReactNode;
+  modal: React.ReactNode;
+}) {
+  return (
+    <>
+      {children}
+      {modal}
+    </>
+  );
+}
+```
+
+### 3.2. Default.js - Xử lý Unmatched Routes
+
+Khi một slot không match với URL hiện tại, Next.js sẽ render `default.js`:
+
+```tsx
+// app/@modal/default.tsx
+export default function Default() {
+  return null; // Không hiển thị gì khi không có modal
+}
+```
+
+**Lưu ý quan trọng**: Nếu không có `default.js`, Next.js sẽ render lỗi 404 cho slot đó.
+
+### 3.3. Loading và Error States
+
+Mỗi parallel route có thể có loading và error states riêng:
+
+```tsx
+// app/@analytics/loading.tsx
+export default function Loading() {
+  return <div>Loading analytics...</div>;
+}
+
+// app/@analytics/error.tsx
+export default function Error({
+  error,
+  reset,
+}: {
+  error: Error;
+  reset: () => void;
+}) {
+  return (
+    <div>
+      <h2>Error loading analytics: {error.message}</h2>
+      <button onClick={reset}>Try again</button>
+    </div>
+  );
+}
+```
+
+## 4. Use Cases Thực Tế
+
+### 4.1. Dashboard với Multiple Views
+
+```
+app/
+├── dashboard/
+│   ├── @analytics/
+│   │   └── page.tsx
+│   ├── @notifications/
+│   │   └── page.tsx
+│   ├── @activity/
+│   │   └── page.tsx
+│   ├── layout.tsx
+│   └── page.tsx
+```
 
 ```tsx
 // app/dashboard/layout.tsx
-export default function DashboardLayout({ children }: { children: React.ReactNode }) {
+export default function DashboardLayout({
+  children,
+  analytics,
+  notifications,
+  activity,
+}: {
+  children: React.ReactNode;
+  analytics: React.ReactNode;
+  notifications: React.ReactNode;
+  activity: React.ReactNode;
+}) {
   return (
-    <div style={{ display: "flex", gap: "1rem" }}>
-      <aside style={{ flex: 1, borderRight: "1px solid #ddd", padding: "1rem" }}>
-        <h3>Sidebar</h3>
-        <ul>
-          <li><a href="/dashboard">Overview</a></li>
-          <li><a href="/dashboard/analytics">Analytics</a></li>
-        </ul>
-      </aside>
-      <main style={{ flex: 3 }}>
-        {children} {/* Đây là outlet song song */}
+    <div className="dashboard-grid">
+      <header>{children}</header>
+      <aside className="sidebar">{notifications}</aside>
+      <main className="main-content">
+        <section>{analytics}</section>
+        <section>{activity}</section>
       </main>
     </div>
   );
 }
 ```
 
-* `children` sẽ nhận **nội dung từ tất cả route group đang active**.
+### 4.2. Modal với Intercepting Routes
 
----
+Kết hợp Parallel Routes với Intercepting Routes để tạo modal:
 
-## 📄 3️⃣ Pages song song
+```
+app/
+├── @modal/
+│   ├── (.)photo/
+│   │   └── [id]/
+│   │       └── page.tsx
+│   └── default.tsx
+├── photo/
+│   └── [id]/
+│       └── page.tsx
+├── layout.tsx
+└── page.tsx
+```
 
 ```tsx
-// app/dashboard/(overview)/page.tsx
-export default function OverviewPage() {
-  return <div><h2>Overview</h2><p>Dashboard overview content</p></div>;
+// app/layout.tsx
+export default function RootLayout({
+  children,
+  modal,
+}: {
+  children: React.ReactNode;
+  modal: React.ReactNode;
+}) {
+  return (
+    <html>
+      <body>
+        {children}
+        {modal}
+      </body>
+    </html>
+  );
 }
 
-// app/dashboard/(analytics)/page.tsx
-export default function AnalyticsPage() {
-  return <div><h2>Analytics</h2><p>Analytics metrics content</p></div>;
+// app/@modal/(.)photo/[id]/page.tsx
+export default function PhotoModal({ params }: { params: { id: string } }) {
+  return (
+    <div className="modal-overlay">
+      <div className="modal-content">
+        <img src={`/photos/${params.id}`} alt="Photo" />
+      </div>
+    </div>
+  );
 }
 ```
 
-* Nếu bạn render `/dashboard`, cả **Overview và Analytics** có thể xuất hiện cùng lúc trong layout.
+### 4.3. Conditional Rendering dựa trên User Role
 
----
+```tsx
+// app/layout.tsx
+import { getServerSession } from 'next-auth';
 
-## 💡 4️⃣ Lợi ích
+export default async function Layout({
+  children,
+  admin,
+  user,
+}: {
+  children: React.ReactNode;
+  admin: React.ReactNode;
+  user: React.ReactNode;
+}) {
+  const session = await getServerSession();
+  const isAdmin = session?.user?.role === 'admin';
 
-* Không phải nested route phức tạp.
-* Dễ mở rộng cho dashboard phức tạp, sidebar + header + content load song song.
-* Giữ trạng thái layout khi chuyển giữa các route group.
+  return (
+    <div>
+      {children}
+      {isAdmin ? admin : user}
+    </div>
+  );
+}
+```
 
+## 5. Soft Navigation và Active State Preservation
 
+Parallel Routes hỗ trợ **soft navigation** - khi điều hướng, các parallel routes không bị unmount trừ khi chúng không match với URL mới.
+
+### Ví dụ:
+```
+URL hiện tại: /dashboard
+- @analytics/page.tsx (active)
+- @team/page.tsx (active)
+
+Điều hướng đến: /dashboard/settings
+- @analytics vẫn giữ state nếu có default.js
+- @team vẫn giữ state nếu có default.js
+```
+
+## 6. Best Practices
+
+### 6.1. Luôn tạo default.js
+
+```tsx
+// app/@modal/default.tsx
+export default function Default() {
+  return null;
+}
+```
+
+Điều này ngăn lỗi 404 khi route không match.
+
+### 6.2. Đặt tên Slots có ý nghĩa
+
+```
+✅ Good: @sidebar, @modal, @analytics
+❌ Bad: @slot1, @component, @x
+```
+
+### 6.3. Sử dụng TypeScript cho Type Safety
+
+```tsx
+type LayoutProps = {
+  children: React.ReactNode;
+  analytics: React.ReactNode;
+  team: React.ReactNode;
+};
+
+export default function Layout({ children, analytics, team }: LayoutProps) {
+  // ...
+}
+```
+
+### 6.4. Kết hợp với Server Components
+
+```tsx
+// app/@analytics/page.tsx
+async function getAnalyticsData() {
+  const res = await fetch('https://api.example.com/analytics');
+  return res.json();
+}
+
+export default async function Analytics() {
+  const data = await getAnalyticsData();
+  
+  return (
+    <div>
+      <h2>Analytics</h2>
+      <pre>{JSON.stringify(data, null, 2)}</pre>
+    </div>
+  );
+}
+```
+
+## 7. So Sánh với Các Phương Pháp Khác
+
+| Tính năng | Parallel Routes | Multiple Components | Tab Navigation |
+|-----------|----------------|---------------------|----------------|
+| Independent URLs | ✅ | ❌ | ⚠️ |
+| Separate Loading States | ✅ | ❌ | ❌ |
+| SEO Friendly | ✅ | ✅ | ⚠️ |
+| Server Components | ✅ | ✅ | ✅ |
+| State Preservation | ✅ | ⚠️ | ✅ |
+
+## 8. Lưu Ý và Hạn Chế
+
+### 8.1. Matching Behavior
+
+- Parallel routes chỉ match khi có route tương ứng trong slot
+- Cần `default.js` để xử lý unmatched cases
+- Soft navigation giữ previous state nếu có default.js
+
+### 8.2. Performance
+
+- Mỗi parallel route là một separate component tree
+- Loading states độc lập giúp improve perceived performance
+- Server Components có thể stream independently
+
+### 8.3. Nested Layouts
+
+Parallel routes có thể nested nhưng cần cẩn thận với complexity:
+
+```
+app/
+├── @modal/
+│   ├── @nested/
+│   │   └── page.tsx
+│   └── layout.tsx
+└── layout.tsx
+```
+
+## 9. Ví Dụ Tổng Hợp: E-commerce Dashboard
+
+```
+app/
+├── dashboard/
+│   ├── @sales/
+│   │   ├── page.tsx
+│   │   ├── loading.tsx
+│   │   └── error.tsx
+│   ├── @inventory/
+│   │   ├── page.tsx
+│   │   └── loading.tsx
+│   ├── @customers/
+│   │   └── page.tsx
+│   ├── layout.tsx
+│   └── page.tsx
+```
+
+```tsx
+// app/dashboard/layout.tsx
+export default function DashboardLayout({
+  children,
+  sales,
+  inventory,
+  customers,
+}: {
+  children: React.ReactNode;
+  sales: React.ReactNode;
+  inventory: React.ReactNode;
+  customers: React.ReactNode;
+}) {
+  return (
+    <div className="dashboard">
+      <header className="dashboard-header">{children}</header>
+      <div className="dashboard-grid">
+        <section className="sales-panel">
+          <h2>Sales Overview</h2>
+          {sales}
+        </section>
+        <section className="inventory-panel">
+          <h2>Inventory Status</h2>
+          {inventory}
+        </section>
+        <section className="customers-panel">
+          <h2>Customer Insights</h2>
+          {customers}
+        </section>
+      </div>
+    </div>
+  );
+}
+
+// app/dashboard/@sales/page.tsx
+async function getSalesData() {
+  // Fetch từ API hoặc database
+  const res = await fetch('https://api.example.com/sales', {
+    next: { revalidate: 60 }
+  });
+  return res.json();
+}
+
+export default async function SalesPanel() {
+  const salesData = await getSalesData();
+  
+  return (
+    <div>
+      <p>Total Revenue: ${salesData.totalRevenue}</p>
+      <p>Orders Today: {salesData.ordersToday}</p>
+    </div>
+  );
+}
+
+// app/dashboard/@sales/loading.tsx
+export default function Loading() {
+  return <div className="skeleton">Loading sales data...</div>;
+}
+```
+
+## 10. Kết Luận
+
+Parallel Routes là một tính năng powerful trong Next.js App Router giúp:
+
+- Tạo complex layouts với multiple independent views
+- Improve user experience với separate loading states
+- Maintain better code organization
+- Enable advanced patterns như modals và conditional rendering
+
+**Khi nào nên sử dụng:**
+- Dashboards với multiple data sources
+- Modal và overlay patterns
+- Multi-panel layouts
+- Conditional views based on user permissions
+
+**Khi nào không nên sử dụng:**
+- Simple layouts với single content area
+- Khi components không cần independent navigation
+- Khi complexity không justify the benefits
+
+Parallel Routes mở ra nhiều khả năng mới cho việc xây dựng ứng dụng Next.js phức tạp và user-friendly!
 
 ---
 [<< BÀI 25](./25.md) | [BÀI 27 >>](./27.md)
